Improve folding regions with elif/else blocks
Fixes an issue where the folding regions for elif/else block
was not ended correctly, causing the region to continue to
the end of the document.

Reported in issue #9

--- a/tests/template.jinja
+++ b/tests/template.jinja
@@ -4,9 +4,33 @@
 
 {% block content %}
 
+    {% for i in range(100) %}
+        {% if i == 12 %}
+            {{ i }}
+        {% elif i == 4 %}
+            {{ i + 1 }}
+        {% else %}
+            {{ i }}
+        {% endif %}
+    {% endfor %}
+
+
     %:for i in range(100):
         %:if i == 12:
             {{ i }}
+        %:elif i == 4:
+            {{ i + 1 }}
+        %:else:
+            {{ i }}
+        %:endif
+    %:endfor
+
+
+    %:for i in range(100):
+        %:if i == 12:
+            {{ i }}
+        %:elif i == 4:
+            {{ i + 1 }}
         %:else:
             {{ i }}
         %:end
